# ot_harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuurikuvaus.md  kayttoohje.md  tyoaikakirjanpito.md  tyoaikakirjanpito.txt  vaatimusmaarittelu.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: analyzer.py  saver.py  watchdough.py
src/tests/: analyzer_test.py  saver_test.py  watchdough_test.py
