[tool.poetry]
name = "watchdough"
version = "0.1.0"
description = ""
authors = ["Kia Lehti <kia.lehti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
